--- a/07navbars.html
+++ b/07navbars.html
@@ -75,6 +75,104 @@
       </div>
     </nav>
 
+    <br /><br />
+
+    <nav>
+      <div class="navbar navbar-dark bg-dark navbar-expand-sm">
+        <div class="container">
+          <a class="navbar-brand" href="#">MyCompany</a>
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#navbarNav2"
+            type="button"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav2"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <br /><br />
+
+    <nav>
+      <div class="navbar navbar-light bg-success navbar-expand-sm">
+        <div class="container">
+          <a class="navbar-brand" href="#">MyCompany</a>
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#navbarNav3"
+            type="button"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav3"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  data-toggle="dropdown"
+                  href="#"
+                  >Careers</a
+                >
+                <div class="dropdown-menu">
+                  <a href="#" class="dropdown-item">America</a
+                  ><a href="#" class="dropdown-item">India</a
+                  ><a href="#" class="dropdown-item">Europe</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <br /><br />
+
+    <div class="container">
+      <ul class="nav nav-pills justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link">Link1</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Link2</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Link3</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Link4</a></li>
+      </ul>
+    </div>
+
     <!-- jquery -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
