--- a/11tables.html
+++ b/11tables.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="bootstrap-5.2.1-dist/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.2.1-dist/bootstrap-5.2.1-dist/css/bootstrap.css"
+    />
   </head>
   <body>
     <h1>Tables Demo</h1>
